GNOME Bugzilla – Bug 737493
Crashes when no keyboard layout selected
Last modified: 2014-10-09 13:54:48 UTC
gnome-initial-setup 3.14.0 crashes when no keyboard layout selected. Steps to reproduce: 1. Run GDM in initial setup mode. 2. Select Hungarian language, and click next. 3. Hungarian keyboard layouts are listed, but no one is selected by default. Click on the next button without selecting any layout. 4. gnome-initial-setup crashes: gnome-initial-s[1078]: segfault at 0 ip 00007fcf7dd72ab6 sp 00007fffe0fc70d8 error 4 in libc-2.20.so[7fcf7dc4b000+199000] Distribution is Arch Linux.
Created attachment 287391 [details] [review] CcInputChooser: avoid crashing when no input source is set priv->id and priv->type are NULL on locales where we don't have a default input source. We shouldn't crash in that case.
Created attachment 287392 [details] [review] keyboard: Don't allow moving forward without an input source Disable the Next button if no input source has been selected in the chooser.
Review of attachment 287391 [details] [review]: of course
Review of attachment 287392 [details] [review]: ok
Attachment 287391 [details] pushed as 2ae64f8 - CcInputChooser: avoid crashing when no input source is set Attachment 287392 [details] pushed as 34b63df - keyboard: Don't allow moving forward without an input source