CcInputChooser: avoid crashing when no input source is set

priv->id and priv->type are NULL on locales where we don't have a
default input source. We shouldn't crash in that case.

https://bugzilla.gnome.org/show_bug.cgi?id=737493